# keepdb

./: .gitignore  Untitled.ipynb  dev_requirements.txt  error-Copy1.ipynb  error.ipynb  examples-Copy1.ipynb  examples.ipynb  makefile  pyproject.toml  readme.md  sloppy_readme.md
notebooks/: canon_attempt.ipynb  complex_data.ipynb  examples.ipynb  simple_complex_data.ipynb
src/keepdb/: __init__.py  _version.py  util.py
src/keepdb/to_from/: __init__.py  pa.py  pd.py  standard.py  strict.py
src/keepdb/util/: compare.py  convert.py
tests/: test_roundtrip.py  test_version.py
