[project]
name = 'keepdb'
version = '0.0.42'
description = 'A sample Python project'
readme = 'readme.md'
authors = [
    {name = 'AJ Friend', email = 'ajfriend@gmail.com'}
]
requires-python = '>= 3.8'
dependencies = [
    'pandas',
    'pyarrow',
]

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'


[tool.pytest.ini_options]
addopts = '--cov --cov-report term-missing --durations=10'
testpaths = [
    'tests',
]
[tool.coverage.run]
source = [
    'keepdb',
    'tests',
]
[tool.coverage.report]
show_missing = true
